check links for img + anchors

--- a/html/contact.html
+++ b/html/contact.html
@@ -35,9 +35,9 @@
 
         <nav class="mainnav">
            <ul>
-             <li><a href="">Shop</a></li>
-             <li><a href="blog.html">Blog</a></li>
-             <li><a href="">Info</a></li>
+             <li><a href="../index.html">Shop</a></li>
+             <li><a href="">Blog</a></li>
+             <li><a href="#">Contact</a></li>
              <li><a href="">Atelier</a></li>
             </ul>
         </nav>
@@ -64,42 +64,41 @@
               <p><span>De ville </span><br> Lisse & haute</p>
              </a>
             </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="../img/deluxe.svg" alt="chausette"></figure>
-                                 <p><span>De luxe</span> <br> Mi-bas FIl d'ecosse</p>
-                             </a>
+            <li>
+             <a href="">
+              <figure><img src="../img/deluxe.svg" alt="chausette"></figure>
+              <p><span>De luxe</span> <br> Mi-bas FIl d'ecosse</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/bouclette.svg" alt="chausette"></figure>
+              <p><span>Bouclette</span> <br> Douce & chaude</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/fantaisie.svg" alt="chausette"></figure>
+              <p><span>fantaisie</span> <br> drôle de chausette</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/soquettes.svg" alt="chausette"></figure>
+              <p> <span>socquette</span> <br> Courte & fine</p>
+             </a>
+            </li>
+            <li>
+             <a href="">
+              <figure><img src="../img/collants.svg" alt="collant"></figure>
+              <p><span>Collant</span> <br> Pour femme</p>
+             </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="../img/bouclette.svg" alt="chausette"></figure>
-                                 <p><span>Bouclette</span> <br> Douce & chaude</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="../img/fantaisie.svg" alt="chausette"></figure>
-                                 <p><span>fantaisie</span> <br> drôle de chausette</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="../img/soquettes.svg" alt="chausette"></figure>
-                                 <p> <span>socquette</span> <br> Courte & fine</p>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="">
-                                 <figure><img src="../img/collants.svg" alt="collant"></figure>
-                                 <p><span>Collant</span> <br> Pour femme</p>
-                             </a>
-                         </li>
-                     </ul>
-                 </nav>
-             </header>
-
-         </section>
+    </section>
 
 
          <!-- ==========================================================================
@@ -108,137 +107,126 @@
 
 <!--===================MAIN====================-->
 
-<form class="well form-horizontal" action=" " method="post"  id="contact_form">
-<fieldset>
+   <form class="well form-horizontal" action=" " method="post"  id="contact_form">
+   <fieldset>
 
-<legend>Contactez-nous !</legend>
-
-
-<div class="form-group">
-  <label class="col-md-4 control-label">Nom</label>
-  <div class="col-md-4 inputGroupContainer">
-  <div class="input-group">
-  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input  name="first_name" placeholder="Nom" class="form-control"  type="text">
-    </div>
-  </div>
-</div>
+   <legend>Contactez-nous !</legend>
 
 
-<div class="form-group">
-  <label class="col-md-4 control-label" >Prenom</label>
+   <div class="form-group">
+    <label class="col-md-4 control-label">Nom</label>
     <div class="col-md-4 inputGroupContainer">
-    <div class="input-group">
-  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input name="last_name" placeholder="Prenom" class="form-control"  type="text">
+     <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+      <input  name="first_name" placeholder="Nom" class="form-control"  type="text">
+     </div>
     </div>
   </div>
-</div>
 
-       <div class="form-group">
-  <label class="col-md-4 control-label">E-Mail</label>
+
+  <div class="form-group">
+   <label class="col-md-4 control-label" >Prenom</label>
     <div class="col-md-4 inputGroupContainer">
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-  <input name="email" placeholder="Adresse E-Mail" class="form-control"  type="text">
-    </div>
+     <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+      <input name="last_name" placeholder="Prenom" class="form-control"  type="text">
+     </div>
+   </div>
   </div>
-</div>
+
+  <div class="form-group">
+   <label class="col-md-4 control-label">E-Mail</label>
+    <div class="col-md-4 inputGroupContainer">
+     <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+      <input name="email" placeholder="Adresse E-Mail" class="form-control"  type="text">
+    </div>
+   </div>
+  </div>
 
 
-<div class="form-group">
+ <div class="form-group">
   <label class="col-md-4 control-label">Site</label>
    <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
-  <input name="website" placeholder="Le nom de votre site" class="form-control" type="text">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
+      <input name="website" placeholder="Le nom de votre site" class="form-control" type="text">
     </div>
   </div>
-</div>
+ </div>
 
 
 
-<div class="form-group">
+ <div class="form-group">
   <label class="col-md-4 control-label">Message</label>
-    <div class="col-md-4 inputGroupContainer">
-    <div class="input-group">
+   <div class="col-md-4 inputGroupContainer">
+     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-            <textarea class="form-control" name="comment" placeholder="Votre message"></textarea>
+        <textarea class="form-control" name="comment" placeholder="Votre message"></textarea>
+     </div>
+   </div>
+ </div>
+
+
+ <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+  <div class="form-group">
+   <label class="col-md-4 control-label"></label>
+    <div class="col-md-4">
+     <button type="submit" class="btn btn-warning" >Envoyer <span class="glyphicon glyphicon-send"></span></button>
+    </div>
   </div>
-  </div>
-</div>
+
+  </fieldset>
+  </form>
+ </div>
 
 
-<div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
-
-
-<div class="form-group">
-  <label class="col-md-4 control-label"></label>
-  <div class="col-md-4">
-    <button type="submit" class="btn btn-warning" >Envoyer <span class="glyphicon glyphicon-send"></span></button>
-  </div>
-</div>
-
-</fieldset>
-</form>
-</div>
-
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.475965284513!2d3.1895435147581237!3d50.67398957911494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3287c59c98277%3A0xb94f7f54b271bd84!2s94+Rue+L%C3%A9on+Marlot%2C+59100+Roubaix!5e0!3m2!1sfr!2sfr!4v1494925887015" width="600" height="450" style="border:0" allowfullscreen></iframe>
-
-
-
-
-
-
-
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.475965284513!2d3.1895435147581237!3d50.67398957911494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3287c59c98277%3A0xb94f7f54b271bd84!2s94+Rue+L%C3%A9on+Marlot%2C+59100+Roubaix!5e0!3m2!1sfr!2sfr!4v1494925887015" width="600" height="450" style="border:0" allowfullscreen></iframe>
 
 
 
      <!--~~~~~~~~~~~~~~~~~~~~~~~start of footer~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-       <footer>
+<footer>
 
-           <article>
-               <figure><img src="../img/poulet.png" alt="logo poulet"></figure>
-               <h5>Fabrication Francaise</h5>
-           </article>
+ <article>
+  <figure><img src="../img/poulet.png" alt="logo poulet"></figure>
+  <h5>Fabrication Francaise</h5>
+ </article>
 
-           <article>
-               <figure><img src="../img/paypal.png" alt="logo paypal"></figure>
-               <h5>Paiement securise</h5>
-           </article>
+ <article>
+  <figure><img src="../img/paypal.png" alt="logo paypal"></figure>
+  <h5>Paiement securise</h5>
+ </article>
 
-           <article>
-               <figure><img src="../img/livraison.png" alt="logo livraison"></figure>
-               <h5>Livraison 48/72h</h5>
-           </article>
+ <article>
+  <figure><img src="../img/livraison.png" alt="logo livraison"></figure>
+  <h5>Livraison 48/72h</h5>
+ </article>
 
-           <article>
-               <figure><img src="../img/maison.png" alt="logo maison"></figure>
-               <h5>38 rue Michelet 42000 Saint Etienne, France</h5>
-           </article>
+ <article>
+  <figure><img src="../img/maison.png" alt="logo maison"></figure>
+  <h5>38 rue Michelet 42000 Saint Etienne, France</h5>
+ </article>
 
-           <article class="face">
-               <figure><img src="../img/facebook.png" alt="logo facebook"></figure>
-               <h5>Facebook plus de 20 000 pouces en l'air</h5>
-           </article>
-
-
-           <article class="twitter">
-               <figure><img src="../img/twitter.png" alt="logo twitter"></figure>
-               <h5>Twitter 4391 Followers</h5>
-           </article>
-
-           <nav>
-               <ul>
-                   <li>Webdesign et Developpement par Axome - Motorise sous Prestashop</li>
-                    <li><label></label>Newsletter</li>
-                   <li><input type="text" placeholder="votre email" value=""><button type="button" name="button">ok</button></li>
-                   <li>Nos passionnantes Conditions Generales de Vente</li>
-               </ul>
-           </nav>
+ <article class="face">
+  <figure><img src="../img/facebook.png" alt="logo facebook"></figure>
+  <h5>Facebook plus de 20 000 pouces en l'air</h5>
+ </article>
 
 
+ <article class="twitter">
+  <figure><img src="../img/twitter.png" alt="logo twitter"></figure>
+  <h5>Twitter 4391 Followers</h5>
+ </article>
 
-       </footer>
+ <nav>
+    <ul>
+     <li>Webdesign et Developpement par Axome - Motorise sous Prestashop</li>
+     <li><label></label>Newsletter</li>
+     <li><input type="text" placeholder="votre email" value=""><button type="button" name="button">ok</button></li>
+     <li>Nos passionnantes Conditions Generales de Vente</li>
+    </ul>
+ </nav>
+
+</footer>
