--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </head>
     <body>
 
-      <!-- ==========================================================================
+<!-- ==========================================================================
                         Start of header
-     ========================================================================== -->
+========================================================================== -->
    <section class="backgroundheader">
     <header>
 
@@ -28,16 +28,16 @@
         <aside class="logo">
           <figure>
            <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
-           <a href="index.html"><img src="../img/logo.svg" alt="logo archi"></a>
-           <img id="panier" src="../img/panier.svg" alt="logo panier">
+           <a href="index.html"><img src="img/logo.svg" alt="logo archi"></a>
+           <img id="panier" src="img/panier.svg" alt="logo panier">
            </figure>
         </aside>
 
         <nav class="mainnav">
            <ul>
-             <li><a href="">Shop</a></li>
-             <li><a href="blog.html">Blog</a></li>
-             <li><a href="">Info</a></li>
+             <li><a href="#">Shop</a></li>
+             <li><a href="">Blog</a></li>
+             <li><a href="html/contact.html">Contact</a></li>
              <li><a href="">Atelier</a></li>
             </ul>
         </nav>
@@ -59,38 +59,38 @@
             <li>
              <a href="">
               <figure>
-              <img src="../img/deville.svg" alt="chausette">
+              <img src="img/deville.svg" alt="chausette">
               </figure>
               <p><span>De ville </span><br> Lisse & haute</p>
              </a>
             </li>
             <li>
              <a href="">
-              <figure><img src="../img/deluxe.svg" alt="chausette"></figure>
+              <figure><img src="img/deluxe.svg" alt="chausette"></figure>
               <p><span>De luxe</span> <br> Mi-bas FIl d'ecosse</p>
              </a>
             </li>
             <li>
              <a href="">
-              <figure><img src="../img/bouclette.svg" alt="chausette"></figure>
+              <figure><img src="img/bouclette.svg" alt="chausette"></figure>
               <p><span>Bouclette</span> <br> Douce & chaude</p>
              </a>
             </li>
             <li>
              <a href="">
-              <figure><img src="../img/fantaisie.svg" alt="chausette"></figure>
+              <figure><img src="img/fantaisie.svg" alt="chausette"></figure>
               <p><span>fantaisie</span> <br> drôle de chausette</p>
              </a>
             </li>
             <li>
              <a href="">
-              <figure><img src="../img/soquettes.svg" alt="chausette"></figure>
+              <figure><img src="img/soquettes.svg" alt="chausette"></figure>
               <p> <span>socquette</span> <br> Courte & fine</p>
              </a>
             </li>
             <li>
              <a href="">
-              <figure><img src="../img/collants.svg" alt="collant"></figure>
+              <figure><img src="img/collants.svg" alt="collant"></figure>
               <p><span>Collant</span> <br> Pour femme</p>
              </a>
             </li>
@@ -147,33 +147,33 @@
   <footer>
 
    <article>
-    <figure><img src="../img/poulet.png" alt="logo poulet"></figure>
+    <figure><img src="img/poulet.png" alt="logo poulet"></figure>
     <h5>Fabrication Francaise</h5>
    </article>
 
    <article>
-    <figure><img src="../img/paypal.png" alt="logo paypal"></figure>
+    <figure><img src="img/paypal.png" alt="logo paypal"></figure>
     <h5>Paiement securise</h5>
    </article>
 
    <article>
-    <figure><img src="../img/livraison.png" alt="logo livraison"></figure>
+    <figure><img src="img/livraison.png" alt="logo livraison"></figure>
     <h5>Livraison 48/72h</h5>
    </article>
 
    <article>
-    <figure><img src="../img/maison.png" alt="logo maison"></figure>
+    <figure><img src="img/maison.png" alt="logo maison"></figure>
     <h5>38 rue Michelet 42000 Saint Etienne, France</h5>
    </article>
 
    <article class="face">
-    <figure><img src="../img/facebook.png" alt="logo facebook"></figure>
+    <figure><img src="img/facebook.png" alt="logo facebook"></figure>
     <h5>Facebook plus de 20 000 pouces en l'air</h5>
    </article>
 
 
    <article class="twitter">
-    <figure><img src="../img/twitter.png" alt="logo twitter"></figure>
+    <figure><img src="img/twitter.png" alt="logo twitter"></figure>
     <h5>Twitter 4391 Followers</h5>
    </article>
 
